--- a/heart-Disease-Project.Rmd
+++ b/heart-Disease-Project.Rmd
@@ -25,8 +25,13 @@ library(purrr)
 ## Reading heart.csv
 
 ```{r heart}
+
+# UNCOMMENT THE CODE BELOW TO READ THE FILE. HOWEVER, IF YOU HAVE ALREADY DOWNLOADED THE HEART.CSV carry on
+
+# heart <- read.csv("https://github.com/ocansey11/Heart_Disease_Analysis_R/blob/main/heart.csv")
 heart <- read.csv(file.choose(), header=TRUE)
 
+# Predictor attributes and their description
 # age
 # sex
 # cp = chest pain type (4 values)
@@ -49,7 +54,9 @@ heart <- read.csv(file.choose(), header=TRUE)
 ```{r Cleaning Data}
 
 #  After close look at each attribute i found discrepancies for two predictors. Ca and Thal.
-# Following the description provided from Kaggle, recurring values, ca-4 and thal-0 were not accounted for.
+# Ca as stated above in the description should have only 4 levels/categories(0 - 3), however it has 5.
+# Thal should have only 3 categories (1 - 3). However it has a fourth of (0)
+# Following the description provided from Kaggle, recurring values, 'ca-4' and 'thal-0' were not accounted for.
 # So either the mistake was made dUring the description of the data set or made during the collection.
 
 
